--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(design-patterns VERSION 0.1.0 LANGUAGES C CXX)
-
+set(CXX_STANDARD 23)
 include(CTest)
 enable_testing()
 
